# start-hack-finance-news-analyzer

./: README.md  main.py  pyproject.toml
backend/: .gitignore  README.md  app.py  db.py  db_utils.py  env.example  general_report_generator.py  graph.py  models.py  normalize_article.py  parsed_articles_market.json  pyproject.toml  quart-app.py  quart_app.py  requirements.txt  schemas.py
backend/api/: accounts.py  chatbot.py  clients.py  health.py  kpis.py  news.py  podcasts.py  reports.py  sources.py
backend/app/: __init__.py  register_blueprints.py
backend/core/: settings.py  tasks.py
backend/db/: models.py  session.py  types.py
backend/migrations/: env.py
backend/migrations/versions/: 584a89920dee_init_schema.py
backend/pipelines/: chatbot.py  ingest_graph.py  podcast.py  sentiment_analysis.py
backend/pipelines/graphs/: graph.py  send_unstructured_articles.py
backend/pipelines/graphs/company_sentiment_analysis_graph/: graph.py  state.py
backend/pipelines/graphs/company_sentiment_analysis_graph/nodes/: entity_extraction.py  entity_sentiment_analysis.py  send_entity.py
backend/pipelines/graphs/ingest_graph/: ingest_graph.py  state.py
backend/pipelines/graphs/ingest_graph/nodes/: news_analysis.py  normalize_article.py
backend/pipelines/graphs/web_scrapper_graph/: graph.py  state.py
backend/pipelines/graphs/web_scrapper_graph/nodes/: check_website.py  cnbc.py  financial_times.py  gather_articles.py  hardcoded_website.py  parse_main_text_date.py  send_articles.py  yahoo_finance.py
backend/repositories/: analysis.py  articles.py
backend/scripts/: general_report_generator.py  influensed_clients.py  main.py  render_report_pdf.py
backend/security/: crypto.py
backend/services/: dedup.py  embeddings.py  event_taxonomy.py  news_analysis.py  normalize_article.py  rag.py  sms_service.py  verify_output.py
backend/utils/: helpers.py  mail.py
frontend/: README.md  index.html  (+6 more)
(+21 files in other folders)
