[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
  "pydantic-settings>=2",
  "SQLAlchemy>=2",
  "psycopg[binary]>=3",         # or psycopg2-binary
  "pgvector>=0.2.5",
  "alembic>=1.13",
  "openai>=1.43",
  "langgraph>=0.2.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
